// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseAddCommand InitGit() should error when git.mail is missing 1`] = `[Error: Missing config key git.email for git commits]`;

exports[`BaseAddCommand InitGit() should error when git.user is missing 1`] = `[Error: Missing config key git.user for git commits]`;

exports[`BaseAddCommand InitGit() should error when no config for git is found 1`] = `[Error: Config not found. Tried to look for a .nbxrc, .nbxrc.json, .nbxrc.yaml, .nbxrc.yml, .nbxrc.js]`;

exports[`BaseAddCommand InitGit() should error when no git in repository 1`] = `[Error: Could not set git config. Maybe the command was not run in a git repository.]`;

exports[`BaseAddCommand InitGit() should error when the config is not full 1`] = `[Error: Missing config key git.user for git commits]`;

exports[`BaseAddCommand InitGit() should error when the git repository is not clean 1`] = `[Error: There is unsaved changed in the git repository, aborting]`;

exports[`BaseAddCommand addDependency should add the dependancy with git 1`] = `
Array [
  "Adding chalk as a dependency",
  "The step was done without any error.",
]
`;

exports[`BaseAddCommand addDependency should add the dependancy without git 1`] = `
Array [
  "Adding chalk as a dependency",
  "The step was done without any error.",
]
`;

exports[`BaseAddCommand addDependency should add the dependancy without git 2`] = `
" M package.json
 M yarn.lock
?? node_modules/
"
`;

exports[`BaseAddCommand addDevDependency should add the dependancy with git 1`] = `
Array [
  "Adding chalk as a dev dependency",
  "The step was done without any error.",
]
`;

exports[`BaseAddCommand addDevDependency should add the dependancy without git 1`] = `
Array [
  "Adding chalk as a dev dependency",
  "The step was done without any error.",
]
`;

exports[`BaseAddCommand addDevDependency should add the dependancy without git 2`] = `
" M package.json
 M yarn.lock
?? node_modules/
"
`;

exports[`BaseAddCommand gitAddUnstaged should add uncommited changes 1`] = `
"A  .nbxrc
A  test.11.md
A  test.12.md
A  test.13.md
A  test.14.md
A  test.15.md
A  test.21.md
A  test.22.md
A  test.23.md
A  test.24.md
A  test.25.md
A  test.31.md
A  test.32.md
A  test.33.md
A  test.34.md
A  test.35.md
A  test.41.md
A  test.42.md
A  test.43.md
A  test.44.md
A  test.45.md
A  test.51.md
A  test.52.md
A  test.53.md
A  test.54.md
A  test.55.md
"
`;
